# among-animals

./: CMakeLists.txt  README.md  main.cpp
engine/Bounds/: Bounds.cpp  Bounds.h
engine/Component/: Component.cpp  Component.h
engine/Game/: Game.cpp  Game.h
engine/GameObject/: GameObject.cpp  GameObject.h
engine/Position/: Position.cpp  Position.h
engine/Size/: Size.cpp  Size.h
engine/components/AnimalComponent/: AnimalComponent.cpp  AnimalComponent.h
engine/components/BackgroundComponent/: BackgroundComponent.cpp  BackgroundComponent.h
engine/components/CameraComponent/: CameraComponent.cpp  CameraComponent.h
engine/components/CollisionComponent/: CollisionComponent.cpp  CollisionComponent.h
engine/components/EnemyComponent/: EnemyComponent.cpp  EnemyComponent.h
engine/components/FixedPositionComponent/: FixedPositionComponent.cpp  FixedPositionComponent.h
engine/components/MenuComponent/: MenuComponent.cpp  MenuComponent.h
engine/components/NavigationComponent/: NavigationComponent.cpp  NavigationComponent.h
engine/components/PhysicsComponent/: PhysicsComponent.cpp  PhysicsComponent.h
engine/components/PlayerComponent/: PlayerComponent.cpp  PlayerComponent.h
engine/components/ProjectileComponent/: ProjectileComponent.cpp  ProjectileComponent.h
engine/components/ScoreboardComponent/: ScoreboardComponent.cpp  ScoreboardComponent.h
engine/components/TextureComponent/: TextureComponent.cpp  TextureComponent.h
engine/components/TileComponent/: TileComponent.cpp  TileComponent.h
engine/utils/: textutils.cpp  textutils.h
